# paper-agent

./: .dockerignore  .env  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.html  architecture.md
readerAI/: agent.py
readerAI/llm_conect/: base.py  huggingface.py  ollama.py
readerAI/prompts/: system.txt  system.yaml
readerAI/tools/: OpenAlex_searcher.py  scholar_searcher.py  scholar_searcher_extra.py
src/doctorate_reader/: cli.py  llm.py  schemas.py
src/doctorate_reader/api/: database.py  main.py
src/doctorate_reader/skills/: composition.py  embeddings.py  filtering.py  search.py  summarization.py  user_profile.py
src/doctorate_reader/tools/: openalex.py
src/doctorate_reader/workflows/: newsletter.py
tests/: test_embeddings.py  test_user_profile.py  testing_ollama.py  testing_scholar_search.py
