[project]
name = "doctorate-reader"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo",email = "esanti@idealista.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "smolagents (>=1.24.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "doctorate_reader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
